# py-automapper

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  Pipfile  README.md  dev-requirements.txt  mypy.ini  pyproject.toml  setup.cfg  setup.py
.code_quality/: .flake8  .mypy.ini
.github/workflows/: run_code_checks.yml
automapper/: __init__.py  custom_types.py  exceptions.py  extensions_loader.py  mapper.py  mapper_initializer.py  mapping_path.py  path_mapper.py  utils.py
automapper/extensions/: default.py  pydantic.py  sqlalchemy.py  tortoise.py
code-checks/: .black.cfg  .flake8  .mypy.ini
docs/: index.md
src/: automapper.py
tests/: test_automapper.py  test_automapper_basics.py  test_automapper_dict.py  test_automapper_dict_field.py  test_automapper_enum.py  test_automapper_sample.py  test_complex_objects_mapping.py  test_dict_field_mapping.py  test_for_complex_obj.py  test_for_custom_extractor.py  test_for_default_extention.py  test_for_pydantic_extention.py  test_for_sqlalchemy_extention.py  test_for_tortoise_extention.py  test_for_tortoise_orm.py  test_global_mapper.py  test_issue_18_implicit_child_field_mapping.py  test_issue_25.py  test_mapping_paths.py  test_path_mapper.py  test_predefined_mapping.py  test_subscriptable_obj_mapping.py  test_try_get_field_values.py  test_utils.py
tests/extensions/: test_default_extention.py  test_sqlalchemy_extention.py  test_tortoise_extention.py
