[tool.poetry]
name = "py-automapper"
version = "1.0.4"
description = "Library for automatically mapping one object to another"
authors = ["Andrii Nikolaienko <anikolaienko14@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/anikolaienko/py-automapper"
repository = "https://github.com/anikolaienko/py-automapper.git"
keywords = ["utils", "dto", "object-mapper", "mapping", "development"]
packages = [
    { include = "automapper" }
]
include = ["CHANGELOG.md", "LICENSE", "README.md"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Build Tools",
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
flake8 = "^3.9"
black = "^20.8b1"
mypy = "^0.910"
tortoise-orm = "^0.17.4"
pydantic = "^1.8.2"
coverage = "^6.2"
pre-commit = "^2.16.0"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"