[tool.poetry]
name = "py-automapper"
version = "1.2.1"
description = "Library for automatically mapping one object to another"
authors = ["Andrii Nikolaienko <anikolaienko14@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/anikolaienko/py-automapper"
repository = "https://github.com/anikolaienko/py-automapper.git"
keywords = ["utils", "dto", "object-mapper", "mapping", "development"]
packages = [
    { include = "automapper" }
]
include = ["CHANGELOG.md", "LICENSE", "README.md"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Build Tools",
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "7.1.3"
tortoise-orm = "^0.19.2"
pydantic = "^1.10.2"
coverage = "^6.5.0"
SQLAlchemy = {version = "^1.4.41", extras = ["mypy"]}
mypy = "^0.982"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"