[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py-automapper"
version = "2.2.0"
description = "Library for automatically mapping one object to another"
authors = [
  {name = "Andrii Nikolaienko", email = "anikolaienko14@gmail.com"}
]
maintainers = [
  {name = "Andrii Nikolaienko", email = "anikolaienko14@gmail.com"}
]
requires-python = ">= 3.8"
license = {file = "LICENSE"}
readme = "README.md"
keywords = ["utils", "dto", "object-mapper", "mapping", "development"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/anikolaienko/py-automapper"
Repository = "https://github.com/anikolaienko/py-automapper.git"
Issues = "https://github.com/anikolaienko/py-automapper/issues"
Changelog = "https://github.com/anikolaienko/py-automapper/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "tortoise-orm~=0.23.0",
    "pydantic~=2.10.6",
    "SQLAlchemy~=2.0.38",
    "twine~=6.1.0",
    "Sphinx~=7.1.2"
]
test = [
    "pre-commit~=3.5.0",
    "pytest~=8.3.5",
    "pytest-cov~=5.0.0",
    "mypy~=1.14.1"
]

[tool.pytest.ini_options]
addopts = "--cov=automapper --cov-report html"
testpaths = [
    "tests"
]
